fixed horizontal scroll

--- a/style.css
+++ b/style.css
@@ -11,6 +11,20 @@ body {
   transition: background-color 0.5s ease;
 }
 
+main {
+  user-select: none;
+  white-space: nowrap;
+  margin-bottom: 8px;
+  overflow-x: auto;
+  overflow-y: hidden;
+  padding-bottom: 8px;
+  position: absolute;
+  top: 100px;
+  right: 0;
+  bottom: 0;
+  left: 0;
+}
+
 /*     Header     */
 h1 {
   color: white;
@@ -71,13 +85,15 @@ h1 {
 
 /*     List styling     */
 .list {
-  float: left;
+  display: inline-block;
   width: 250px;
-  background-color: white;
-  margin-left: 30px;
-  margin-top: 10px;
+  margin: 0 4px;
   box-shadow: 0 14px 30px rgba(0, 0, 0, 0.25);
   border-top: 5px solid #ef5350;
+}
+
+.list:first-child {
+  margin-left: 8px;
 }
 
 .list:hover {
@@ -101,7 +117,6 @@ h1 {
   padding: 0;
   border: none;
   border-bottom: 1px solid red;
-  background-color: white;
   color: red;
   outline: none;
   cursor: pointer;
@@ -125,16 +140,15 @@ h1 {
   color: red;
   width: 100%;
   height: 28px;
-  background-color: white;
   border: none;
   border-top: 1px solid red;
   outline: none;
+  line-height: 27px;
+  text-align: center;
+  cursor: pointer;
 }
 
-.list__add-note__icon, .list__add-note__text {
-  line-height: 28px;
-}
-
-.list__add-note__text {
-  font-size: 18px;
+.list__add-note:hover {
+  background-color: red;
+  color: white;
 }
